--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -43,14 +43,43 @@ nav a{
 /* header related styles */
 .header{
     background-color: #FFF8F3;
-    background-image: url('..images/header_bg.png');
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 .banner{
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 .banner .profile-pic{
     width:300px;
-
+}
+.banner-greeting{
+    font-size: 45px;
+    color:#474747;
+    margin-bottom: 0;
+}
+.banner-title{
+    font-size: 45px;
+    font-weight: 700px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.about{
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0;
+}
+.section-title{
+    color:#181818;
+    text-align: center;
+    font-weight: 700;
+}
+.section-description{
+    color:#757575;
+    text-align: center;
+    font-size: 18px;
 }
