--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -97,3 +97,26 @@ main{
 #what-i-do-description{
     padding: 30px 150px;
 }
+/* skills related styles */
+.skils-container{
+    display: flex;
+    gap:24px;
+}
+.skil{ 
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px rgba(0,0,0,0.06);
+     
+}
+.skil-description{
+    color:#757575;
+}
+main-section{
+    margin-top: 130px;
+}
+/* Resume section styles */
+.resume-column-title{
+    color:#474747;
+    font-size: 30px;
+    font-weight: 700px;
+}
